--- a/online_exam/index.html
+++ b/online_exam/index.html
@@ -2,14 +2,57 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
     <title>Python Test</title>
 </head>
 
 <body>
-    <form>
+    <div class="sidebar scrollbar" >
+        <center><h3>Intractions</h3></center>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
 
+            Why do we use it?
+            It is a long established fact that a reader will be distracted by the readable content of a page when
+            looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
+            letters, as opposed to using 'Content here, content here', making it look like readable English. Many
+            desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
+            search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved
+            over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+
+
+            Where does it come from?
+            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+            Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
+            Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
+            source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
+            of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
+            during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
+            section 1.10.32.
+
+            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+            1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact
+            original form, accompanied by English versions from the 1914 translation by H. Rackham.
+
+            Where can I get some?
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised words which don't look even slightly believable. If you are
+            going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
+            middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as
+            necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
+            words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.
+            The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic
+            words etc.
+        </p>
+    </div>
+    <form>
         <div class="index">
+
             <h1>
                 <center>Python Test</center>
             </h1>
@@ -19,54 +62,250 @@
             </span>
 
             <h2>
-                <div class="radio">Q.What is HTML?</div>
+                <div class="radio">1. What is Hyper text markup language?</div>
             </h2>
             <div>
                 <div class="radio">
-                    <input type="radio" id="html" name="fav_language" value="HTML"><label for="html">Html</label>
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label for="html">Html</label>
 
-                </div>
-                <div class="radio1">
-                    <input type="radio" id="CSS" name="fav_language" value="CSS"><label for="CSS">Css</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label for="CSS">Css</label>
+                    </div>
                 </div>
             </div>
             <div>
                 <div class="radio">
                     <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
                         for="JAVASCRIPT">Javascript</label>
-                </div>
-                <div class="radio1">
-                    <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">Js</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">Js</label>
+                    </div>
                 </div>
             </div>
             <h2>
-                <div class="radio">
-                    Q. Hello World</div>
+                <div class="radio">2. Who is the father of HTML?</div>
             </h2>
             <div>
                 <div class="checkbox">
                     <input type="checkbox" id="hello" name="hello" value="hello" />
-                    <label for="hello">Hello</label>
+                    <label for="hello">Rasmus Lerdorf</label>
+                    <div class="checkbox1">
+                        <input type="checkbox" id="World" name="World" value="World" />
+                        <label for="World">Tim Berners-Lee </label><br />
+                    </div>
                 </div>
-                <div class="checkbox1">
-                    <input type="checkbox" id="World" name="World" value="World" />
-                    <label for="World">World</label><br />
-                </div>
+
                 <div class="checkbox">
                     <input type="checkbox" id="hi" name="hi" value="HI" />
-                    <label for="hi">Hi</label>
-                </div>
-                <div class="checkbox1">
-                    <input type="checkbox" id="hey" name="hey" value="HEY" />
-                    <label for="hey">Hey</label>
+                    <label for="hi">Brendan Eich</label>
+                    <div class="checkbox1">
+                        <input type="checkbox" id="hey" name="hey" value="HEY" />
+                        <label for="hey">Sergey Brin </label>
+                    </div>
                 </div>
             </div>
+            <h2>
+                <div class="radio">3. Javascript is an _______ language?</div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label
+                        for="html">Object-Oriented</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label
+                            for="CSS">Object-Based</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">Procedural</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">None of the
+                            above</label>
+                    </div>
+                </div>
+            </div>
+
+            <h2>
+                <div class="radio">4. The full form of CSS is:</div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label for="html">Cascading Style
+                        Sheets</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label for="CSS">Coloured Special
+                            Sheets</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">Color and Style Sheets</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">None of the
+                            above</label>
+                    </div>
+                </div>
+            </div>
+            <h2>
+                <div class="radio">
+                    5. How can we change the background color of an element?
+                </div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label
+                        for="html">background-color</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label for="CSS">Color</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">Both A and B</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">None of the
+                            above</label>
+                    </div>
+                </div>
+            </div>
+            <h2>
+                <div class="radio">
+                    6. Which of the following is used to read an HTML page and render
+                    it?
+                </div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label for="html">Web
+                        server</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label for="CSS">Web
+                            network</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">Web browser</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">Web matrix</label>
+                    </div>
+                </div>
+            </div>
+
+            <h2>
+                <div class="radio">
+                    7. Which of the following is not javascript data types?
+                </div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label for="html">Null type</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label for="CSS">Undefined
+                            type</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">Number type</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">All of the
+                            mentioned</label>
+                    </div>
+                </div>
+            </div>
+
+            <h2>
+                <div class="radio">
+                    8. Which of the following object is the main entry point to all
+                    client-side JavaScript features and APIs?
+                </div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label for="html">Position</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label for="CSS">Window</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">Standard</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">Location</label>
+                    </div>
+                </div>
+            </div>
+
+            <h2>
+                <div class="radio">
+                    9. In which part of the HTML metadata is contained?
+                </div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label for="html">head tag</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label for="CSS">title
+                            tag</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">html tag</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">body tag</label>
+                    </div>
+                </div>
+            </div>
+            <h2>
+                <div class="radio">
+                    10. The CSS property used to specify the transparency of an
+                    element is?
+                </div>
+            </h2>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="html" name="fav_language" value="HTML" /><label for="html">Opacity</label>
+                    <div class="radio1">
+                        <input type="radio" id="CSS" name="fav_language" value="CSS" /><label
+                            for="CSS">Visibility</label>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="radio">
+                    <input type="radio" id="JAVASCRIPT" name="fav_language" value="JAVASCRIPT" /><label
+                        for="JAVASCRIPT">Filter</label>
+                    <div class="radio1">
+                        <input type="radio" id="JS" name="fav_language" value="JS" /><label for="JS">None of the
+                            above</label>
+                    </div>
+                </div>
+            </div>
+
             <br /><br /><br />
             <center>
                 <h2><input type="submit" value="Submit" /></h2>
             </center>
         </div>
     </form>
+    </div>
 </body>
 
 </html>
